# portable-init

./: Cargo.toml  syscall.list  syscall.md
.github/workflows/: rust.yml
src/: cleaner.rs  counter.rs  envs.rs  inhibit.rs  ipc.rs  landlock.rs  logger.rs  main.rs  process_env.rs  seccomp.rs  spawn.rs  uclamp.rs
