[package]
name = "init"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.13.12", features = ["file_chooser"] }
landlock = "0.4.5"
libseccomp = "0.4.0"
nix = { version = "0.31.3", features = ["term"] }
serde = "1.0.228"
serde_json = "1.0.150"
systemd = "0.10.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "signal"]}
tokio-util = { version = "0.7.18", features = ["rt"] }
zbus = { version = "5.16.0", default-features = false, features = ["tokio"] }
